name:                etlas-index
version:             0.1.0.0
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable gen-etlas-index
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.12
                     , directory
                     , filepath
                     , directory-tree
                     , temporary
                     , process
  default-language:    Haskell2010
